# first-rust-api

./: Cargo.toml  diesel.toml
migrations/2024-11-18-043413_create_roles/: down.sql  up.sql
migrations/2024-11-19-062300_user/: up.sql
src/: main.rs  schema.rs
src/config/: postgresql.rs
src/docs/: api_doc.rs  mod.rs
src/helpers/: hash.rs  jsonwebtoken.rs  mod.rs  redis.rs
src/middlewares/: auth.rs
src/modules/: mod.rs
src/modules/role/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/user/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  service.rs
src/utils/: message.rs  response.rs
