[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
utoipa = "5.2"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }

