[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
utoipa = "5.2"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
argon2 = "0.4"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
futures-util = "0.3"